experiment_output/error_log/nondex-rodm-gradle-teamcity-dsl-plugin.log
POM relocation to an other version number is not fully supported in Gradle : xml-apis:xml-apis:2.0.2 relocated to xml-apis:xml-apis:1.0.b2.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:24: error: cannot find symbol
import org.gradle.api.provider.PropertyState;
                              ^
  symbol:   class PropertyState
  location: package org.gradle.api.provider
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:50: error: cannot find symbol
    private PropertyState<String> version = getProject().property(String.class);
            ^
  symbol:   class PropertyState
  location: class GenerateConfigurationTask
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:52: error: cannot find symbol
    private PropertyState<String> format = getProject().property(String.class);
            ^
  symbol:   class PropertyState
  location: class GenerateConfigurationTask
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:54: error: cannot find symbol
    private PropertyState<File> baseDir = getProject().property(File.class);
            ^
  symbol:   class PropertyState
  location: class GenerateConfigurationTask
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:56: error: cannot find symbol
    private PropertyState<File> destDir = getProject().property(File.class);
            ^
  symbol:   class PropertyState
  location: class GenerateConfigurationTask
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:20: error: cannot find symbol
import org.gradle.api.provider.PropertyState;
                              ^
  symbol:   class PropertyState
  location: package org.gradle.api.provider
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:27: error: cannot find symbol
    private PropertyState<String> teamcityVersion;
            ^
  symbol:   class PropertyState
  location: class TeamCityDSLExtension
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:29: error: cannot find symbol
    private PropertyState<String> format;
            ^
  symbol:   class PropertyState
  location: class TeamCityDSLExtension
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:31: error: cannot find symbol
    private PropertyState<File> baseDir;
            ^
  symbol:   class PropertyState
  location: class TeamCityDSLExtension
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:33: error: cannot find symbol
    private PropertyState<File> destDir;
            ^
  symbol:   class PropertyState
  location: class TeamCityDSLExtension
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:50: error: incompatible types: Class<String> cannot be converted to String
    private PropertyState<String> version = getProject().property(String.class);
                                                                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:52: error: incompatible types: Class<String> cannot be converted to String
    private PropertyState<String> format = getProject().property(String.class);
                                                                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:54: error: incompatible types: Class<File> cannot be converted to String
    private PropertyState<File> baseDir = getProject().property(File.class);
                                                                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/GenerateConfigurationTask.java:56: error: incompatible types: Class<File> cannot be converted to String
    private PropertyState<File> destDir = getProject().property(File.class);
                                                                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:36: error: incompatible types: Class<String> cannot be converted to String
        teamcityVersion = project.property(String.class);
                                                 ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:37: error: incompatible types: Class<String> cannot be converted to String
        format = project.property(String.class);
                                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:38: error: incompatible types: Class<File> cannot be converted to String
        baseDir = project.property(File.class);
                                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1141/wd/NonDex-plugin-test/github.com/rodm/gradle-teamcity-dsl-plugin/src/main/java/com/github/rodm/teamcity/dsl/TeamCityDSLExtension.java:39: error: incompatible types: Class<File> cannot be converted to String
        destDir = project.property(File.class);
                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
18 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1m 14s
